--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 
 <html>
 <head>
-    <title>Page Title</title>
+    <title>Francesco Bedussi</title>
     <link rel="stylesheet" href="style.css"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 <body>
     <header role="banner">
-        <h1>Francesco Bedussi</h1>
+        <h1 class="pageTitle">Francesco Bedussi</h1>
     </header>
     <main>
-        <div class="imageContainer">
-            <img src="francesco-bedussi.jpg" alt="Francesco Bedussi" />
+        <img class="profileImage" src="francesco-bedussi.jpg" alt="Francesco Bedussi" />
         </div>
-        <div class="briefProfile">
+        <div class="profileText">
             <p>I am a senior front end developer.</p>
             <p>I like to build things, to solve problems and to learn new things.</p>
             <p>I love to work with people different from me, but toward a common goal.</p>
@@ -25,25 +25,31 @@
                 Do you want to know something about me? Ask to my chatbot avatar!
             </div>
             <iframe
-                width="350"
-                height="430"
+                width="100%"
+                style="height: 100vh;"
                 src="https://console.api.ai/api-client/demo/embedded/5890d9ba-a444-49d7-be59-f7e2f4aeebce">
             </iframe>
         </div>
     </main>
     <footer>
-        <ul>
+        <ul class="socialContainer">
             <li>
-                <span class="icon"></span>
-                <span class="text">Linkedin</span>
+                <a href="https://www.linkedin.com/in/francescobedussi/" target="_black">
+                    <span class="icon"><img src="linkedin.svg" alt=""/></span>
+                    <span class="text">Linkedin</span>
+                </a>
             </li>
             <li>
-                <span class="icon"></span>
-                <span class="text">Github</span>
+                <a href="https://github.com/fbedussi" target="_black">
+                    <span class="icon"><img src="github.svg" alt=""/></span>
+                    <span class="text">Github</span>
+                </a>
             </li>
             <li>
-                <span class="icon"></span>
-                <span class="text">Twitter</span>
+                <a href="https://twitter.com/fbedussi" target="_black">                
+                    <span class="icon"><img src="twitter.svg" alt=""/></span>
+                    <span class="text">Twitter</span>
+                </a>
             </li>
         </ul>
     </footer>
