--- a/index.html
+++ b/index.html
@@ -22,11 +22,55 @@
 
     <div class="menuWrapper">
         <button class="menuButton">
-            <span class="menuIcon">
-                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
-                </svg>
+            <span class="icon menuIcon">
+                <svg xmlns:dc="http://purl.org/dc/elements/1.1/"
+                xmlns:cc="http://creativecommons.org/ns#"
+                xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                xmlns:svg="http://www.w3.org/2000/svg"
+                xmlns="http://www.w3.org/2000/svg"
+                version="1.1"
+                id="svg2"
+                class="menuButton-icon"
+                viewBox="0 0 39 29"
+                height="29"
+                width="39"
+                preserveAspectRatio="xMidYMid">
+   
+               <title>@Html.Common().RenderLabel("pages", "store", "store.xml", "mainMenu")</title>
+   
+               <rect ry="0"
+                     class="menuIconPart"
+                     y="0.0159767"
+                     x="-0.0043927"
+                     height="2.96842"
+                     width="38.9892"
+                     id="menuIconTop"
+                     style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"/>
+               <rect style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"
+                     class="menuIconPart"
+                     id="menuIconMiddle"
+                     width="38.9892"
+                     height="2.96842"
+                     x="-0.0043927"
+                     y="13.016"
+                     ry="0"/>
+               <rect style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"
+                     class="menuIconPart"
+                     id="menuIconMiddle2"
+                     width="38.9892"
+                     height="2.96842"
+                     x="-0.0043927"
+                     y="13.016"
+                     ry="0"/>
+               <rect ry="0"
+                     class="menuIconPart"
+                     y="26.016"
+                     x="-0.0043927"
+                     height="2.96842"
+                     width="38.9892"
+                     id="menuIconBottom"
+                     style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"/>
+           </svg>
                 <span class="visuallyHidden">Menu</span>
             </span>
         </button>
@@ -191,6 +235,7 @@
                     <h3 class="dataSheet-title">Technical details</h3>
                     <ul class="dataSheet-list">
                         <li>Fully accessible website compliant with WCAG 2.0 level A requirements</li>
+                        <li>Responsive images</li>
                         <li>ES-6 + webpack</li>
                         <li>SASS + PostCss</li>
                         <li>Mobile &amp; desktop versions, with a shared core and different heads</li>
@@ -198,11 +243,237 @@
                         <li>Based on a .NET MVC custom front-end platform</li>
                         <li>Based on custom js pub-sub framework</li>
                     </ul>
+                    <a class="btn" href="https://www.justcavalli.com" href="_blank">visit the site</a>
                 </div>
             </div>
+        </div>
 
-            <a class="btn">visit the </a>
+        <div class="slide hide" id="apl">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="http://www.ledpedestriancrossing.com/configuratore/index.html" target="_blank">APL configurator</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img src="media/apl.jpg" alt="">
 
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>React + Redux</li>
+                        <li>Dynamic contents via json file</li>
+                        <li>Fully responsive</li>
+                    </ul>
+                    <a class="btn" href="http://www.ledpedestriancrossing.com/configuratore/index.html" href="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide hide" id="margiela">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="https://www.maisonmargiela.com" target="_blank">Maison Margiela e-store</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img src="media/margiela.jpg" alt="">
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>Fully responsive</li>
+                        <li>ES-6 + webpack</li>
+                        <li>SASS + PostCss</li>
+                        <li>Integration with third party CMS</li>
+                        <li>Based on a .NET MVC custom front-end platform</li>
+                        <li>Based on custom js pub-sub framework</li>
+                    </ul>
+                    <a class="btn" href="https://www.maisonmargiela.com" href="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide hide" id="y3">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="http://store.y-3.com" target="_blank">Y-3 e-store</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img src="media/y3.jpg" alt="">
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>Desktop &amp; Mobile versions</li>
+                        <li>SASS</li>
+                        <li>XSLT</li>
+                        <li>Based on custom js pub-sub framework</li>
+                    </ul>
+                    <a class="btn" href="http://store.y-3.com" href="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide hide" id="lagerfeld">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="https://www.karl.com" target="_blank">Karl Lagerfeld e-store</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img src="media/karl.jpg" alt="">
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>Desktop &amp; Mobile versions</li>
+                        <li>SASS + Compass</li>
+                        <li>Wordpress integration for non e-commerce contents</li>
+                        <li>Based on a .NET MVC custom front-end platform</li>
+                        <li>Based on custom js pub-sub framework</li>
+                    </ul>
+                    <a class="btn" href="https://www.karl.com" href="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide hide" id="nextOpening">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="http://nextopeningfood.it" target="_blank">Next Opening Food website</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img src="media/nextOpening.jpg" alt="">
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>Joomla CMS</li>
+                    </ul>
+                    <a class="btn" href="http://nextopeningfood.it" href="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide hide" id="bicigeneratori">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="http://www.bicigeneratori.it" target="_blank">Bicigeneratori website</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img src="media/bicigeneratori.jpg" alt="">
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>Fully responsive</li>
+                        <li>Joomla CMS</li>
+                        <li>Custom template</li>
+                    </ul>
+                    <a class="btn" href="http://www.bicigeneratori.it" href="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide hide" id="carisma">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="http://carismarct.com" target="_blank">Carisma website</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img src="media/carisma.jpg" alt="">
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>Joomla CMS</li>
+                        <li>Custom template</li>
+                    </ul>
+                    <a class="btn" href="http://carismarct.com" href="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide hide" id="legambiente">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="http://legambientebologna.org" target="_blank">Legambiente Bologna website</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img src="media/legambiente.jpg" alt="">
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>Fully responsive</li>
+                        <li>Joomla CMS</li>
+                        <li>Custom template</li>
+                    </ul>
+                    <a class="btn" href="http://legambientebologna.org" href="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide hide" id="viro">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="http://clubsicurezza.viro.it" target="_blank">Club Viro della Sicurezza blog</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img src="media/viro.jpg" alt="">
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>Fully responsive</li>
+                        <li>Wordpress CMS</li>
+                        <li>Custom template</li>
+                    </ul>
+                    <a class="btn" href="http://clubsicurezza.viro.it" href="_blank">visit the site</a>
+                </div>
+            </div>
         </div>
 
         <div class="slide hide" id="about">
@@ -316,6 +587,7 @@
         </div>
 
     </main>
+    <script src="vjQUery.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
 </body>
 
