--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <li>Based on a .NET MVC custom front-end platform</li>
                         <li>Based on custom js pub-sub framework</li>
                     </ul>
-                    <a class="btn" href="https://www.justcavalli.com" href="_blank">visit the site</a>
+                    <a class="btn" href="https://www.justcavalli.com" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -270,7 +270,7 @@
                         <li>Dynamic content loading via json file</li>
                         <li>Fully responsive</li>
                     </ul>
-                    <a class="btn" href="http://www.ledpedestriancrossing.com/configuratore/index.html" href="_blank">visit the site</a>
+                    <a class="btn" href="http://www.ledpedestriancrossing.com/configuratore/index.html" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -298,7 +298,7 @@
                         <li>Based on a .NET MVC custom front-end platform</li>
                         <li>Based on custom js pub-sub framework</li>
                     </ul>
-                    <a class="btn" href="https://www.maisonmargiela.com" href="_blank">visit the site</a>
+                    <a class="btn" href="https://www.maisonmargiela.com" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -324,7 +324,7 @@
                         <li>XSLT</li>
                         <li>Based on custom js pub-sub framework</li>
                     </ul>
-                    <a class="btn" href="http://store.y-3.com" href="_blank">visit the site</a>
+                    <a class="btn" href="http://store.y-3.com" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -351,7 +351,7 @@
                         <li>Based on a .NET MVC custom front-end platform</li>
                         <li>Based on custom js pub-sub framework</li>
                     </ul>
-                    <a class="btn" href="https://www.karl.com" href="_blank">visit the site</a>
+                    <a class="btn" href="https://www.karl.com" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -374,7 +374,7 @@
                     <ul class="dataSheet-list">
                         <li>Joomla CMS</li>
                     </ul>
-                    <a class="btn" href="http://nextopeningfood.it" href="_blank">visit the site</a>
+                    <a class="btn" href="http://nextopeningfood.it" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -399,7 +399,7 @@
                         <li>Joomla CMS</li>
                         <li>Custom template</li>
                     </ul>
-                    <a class="btn" href="http://www.bicigeneratori.it" href="_blank">visit the site</a>
+                    <a class="btn" href="http://www.bicigeneratori.it" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -423,7 +423,7 @@
                         <li>Joomla CMS</li>
                         <li>Custom template</li>
                     </ul>
-                    <a class="btn" href="http://carismarct.com" href="_blank">visit the site</a>
+                    <a class="btn" href="http://carismarct.com" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -448,7 +448,7 @@
                         <li>Joomla CMS</li>
                         <li>Custom template</li>
                     </ul>
-                    <a class="btn" href="http://legambientebologna.org" href="_blank">visit the site</a>
+                    <a class="btn" href="http://legambientebologna.org" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -473,7 +473,7 @@
                         <li>Wordpress CMS</li>
                         <li>Custom template</li>
                     </ul>
-                    <a class="btn" href="http://clubsicurezza.viro.it" href="_blank">visit the site</a>
+                    <a class="btn" href="http://clubsicurezza.viro.it" target="_blank">visit the site</a>
                 </div>
             </div>
         </div>
@@ -500,7 +500,7 @@
                         <li>Optimistic interface</li>
                         <li>Support for multiple databases: services for indexedDb and firebase are included, more can be added</li>
                     </ul>
-                    <a class="btn" href="https://github.com/fbedussi/ttracker" href="_blank">take a look at the project</a>
+                    <a class="btn" href="https://github.com/fbedussi/ttracker" target="_blank">take a look at the project</a>
                 </div>
             </div>
         </div>
@@ -526,7 +526,7 @@
                         <li>Themable UI</li>
                         <li>Multilanguage</li>
                     </ul>
-                    <a class="btn" href="https://github.com/fbedussi/reveal-js-editor" href="_blank">take a look at the project</a>
+                    <a class="btn" href="https://github.com/fbedussi/reveal-js-editor" target="_blank">take a look at the project</a>
                 </div>
             </div>
         </div>
@@ -551,7 +551,7 @@
                         <li>Node.js + Express</li>
                         <li>Vanilla Js</li>
                     </ul>
-                    <a class="btn" href="https://github.com/fbedussi/nightwatchGui" href="_blank">take a look at the project</a>
+                    <a class="btn" href="https://github.com/fbedussi/nightwatchGui" target="_blank">take a look at the project</a>
                 </div>
             </div>
         </div>
@@ -578,7 +578,7 @@
                         <li>File partials</li>
                         <li>Conditional rendering</li>
                     </ul>
-                    <a class="btn" href="https://github.com/fbedussi/gpp" href="_blank">take a look at the project</a>
+                    <a class="btn" href="https://github.com/fbedussi/gpp" target="_blank">take a look at the project</a>
                 </div>
             </div>
         </div>
