--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Francesco Bedussi, front end and javascript developer</title>
+    <title>Francesco Bedussi, front end and JavaScript developer</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8">
@@ -107,7 +107,7 @@
             <h1 class="headline">I am a
                 <a class="link" href="#frontEndPortfolio">senior front end developer</a>
                 <br />
-                and <a class="link" href="#jsPortfolio">javascript engineer</a>
+                and <a class="link" href="#jsPortfolio">JavaScript engineer</a>
             </h1>
 
         </div>
@@ -191,7 +191,7 @@
                 </svg>
                 <span class="visuallyHidden">back</span>
             </button>
-            <h2 class="slideTitle">JavasScript development portfolio</h2>
+            <h2 class="slideTitle">JavaScript development portfolio</h2>
             <ul>
                 <li>
                     <a href="#ttracker">
@@ -372,7 +372,7 @@
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
                     <ul class="dataSheet-list">
-                        <li>Joomla CMS</li>
+                        <li>Joomla! CMS</li>
                     </ul>
                     <a class="btn" href="http://nextopeningfood.it" target="_blank">visit the site</a>
                 </div>
@@ -396,7 +396,7 @@
                     <h3 class="dataSheet-title">Technical details</h3>
                     <ul class="dataSheet-list">
                         <li>Fully responsive</li>
-                        <li>Joomla CMS</li>
+                        <li>Joomla! CMS</li>
                         <li>Custom template</li>
                     </ul>
                     <a class="btn" href="http://www.bicigeneratori.it" target="_blank">visit the site</a>
@@ -420,7 +420,7 @@
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
                     <ul class="dataSheet-list">
-                        <li>Joomla CMS</li>
+                        <li>Joomla! CMS</li>
                         <li>Custom template</li>
                     </ul>
                     <a class="btn" href="http://carismarct.com" target="_blank">visit the site</a>
@@ -445,7 +445,7 @@
                     <h3 class="dataSheet-title">Technical details</h3>
                     <ul class="dataSheet-list">
                         <li>Fully responsive</li>
-                        <li>Joomla CMS</li>
+                        <li>Joomla! CMS</li>
                         <li>Custom template</li>
                     </ul>
                     <a class="btn" href="http://legambientebologna.org" target="_blank">visit the site</a>
@@ -591,7 +591,7 @@
                 <span class="visuallyHidden">back</span>
             </button>
             <h2 id="about" class="slideTitle">About me</h2>
-            <p>I am a senior front end and javascript developer. I’m expert in usability, accessibility, and test automation.</p>
+            <p>I am a senior front end and JavaScript developer. I’m expert in usability, accessibility, and test automation.</p>
 
             <h3 class="slideSubtitle" id="expertise">Expertise</h3>
             <p>I work in the web industry since 2002. At first as a project leader, then, from 2007 to 2014 as a freelance
